Update Intro to DS.ipynb

--- a/Intro to DS.ipynb
+++ b/Intro to DS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,10 @@
     "\n",
     "#ignore warning messages \n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore') "
+    "warnings.filterwarnings('ignore') \n",
+    "\n",
+    "# Data processing, metrics and modeling\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder"
    ]
   },
   {
@@ -51647,6 +51650,295 @@
    "metadata": {},
    "source": [
     "## Prepare dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### StandardScaler and LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_col = [\"Outcome\"]\n",
+    "cat_cols   = data.nunique()[data.nunique() < 12].keys().tolist()\n",
+    "cat_cols   = [x for x in cat_cols ]\n",
+    "#numerical columns\n",
+    "num_cols   = [x for x in data.columns if x not in cat_cols + target_col]\n",
+    "#Binary columns with 2 values\n",
+    "bin_cols   = data.nunique()[data.nunique() == 2].keys().tolist()\n",
+    "#Columns more than 2 values\n",
+    "multi_cols = [i for i in cat_cols if i not in bin_cols]\n",
+    "\n",
+    "#Label encoding Binary columns\n",
+    "le = LabelEncoder()\n",
+    "for i in bin_cols :\n",
+    "    data[i] = le.fit_transform(data[i])\n",
+    "    \n",
+    "#Duplicating columns for multi value columns\n",
+    "data = pd.get_dummies(data = data,columns = multi_cols )\n",
+    "\n",
+    "#Scaling Numerical columns\n",
+    "std = StandardScaler()\n",
+    "scaled = std.fit_transform(data[num_cols])\n",
+    "scaled = pd.DataFrame(scaled,columns=num_cols)\n",
+    "\n",
+    "#dropping original values merging scaled values for numerical columns\n",
+    "df_data_og = data.copy()\n",
+    "data = data.drop(columns = num_cols,axis = 1)\n",
+    "data = data.merge(scaled,left_index=True,right_index=True,how = \"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Outcome</th>\n",
+       "      <th>N1</th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>N0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.639947</td>\n",
+       "      <td>0.864625</td>\n",
+       "      <td>-0.032180</td>\n",
+       "      <td>0.665181</td>\n",
+       "      <td>0.311604</td>\n",
+       "      <td>0.169483</td>\n",
+       "      <td>0.468492</td>\n",
+       "      <td>1.425995</td>\n",
+       "      <td>0.436284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.844885</td>\n",
+       "      <td>-1.204727</td>\n",
+       "      <td>-0.528124</td>\n",
+       "      <td>-0.010112</td>\n",
+       "      <td>-0.440843</td>\n",
+       "      <td>-0.848549</td>\n",
+       "      <td>-0.365061</td>\n",
+       "      <td>-0.190672</td>\n",
+       "      <td>-0.455696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.233880</td>\n",
+       "      <td>2.014265</td>\n",
+       "      <td>-0.693438</td>\n",
+       "      <td>0.327535</td>\n",
+       "      <td>0.311604</td>\n",
+       "      <td>-1.328478</td>\n",
+       "      <td>0.604397</td>\n",
+       "      <td>-0.105584</td>\n",
+       "      <td>-0.512575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.844885</td>\n",
+       "      <td>-1.073339</td>\n",
+       "      <td>-0.528124</td>\n",
+       "      <td>-0.685405</td>\n",
+       "      <td>-0.536303</td>\n",
+       "      <td>-0.630399</td>\n",
+       "      <td>-0.920763</td>\n",
+       "      <td>-1.041549</td>\n",
+       "      <td>-0.731491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.141852</td>\n",
+       "      <td>0.503310</td>\n",
+       "      <td>-2.677212</td>\n",
+       "      <td>0.665181</td>\n",
+       "      <td>0.294758</td>\n",
+       "      <td>1.551096</td>\n",
+       "      <td>5.484909</td>\n",
+       "      <td>-0.020496</td>\n",
+       "      <td>1.169312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>763</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.827813</td>\n",
+       "      <td>-0.679177</td>\n",
+       "      <td>0.298449</td>\n",
+       "      <td>2.128317</td>\n",
+       "      <td>0.429525</td>\n",
+       "      <td>0.067679</td>\n",
+       "      <td>-0.908682</td>\n",
+       "      <td>2.532136</td>\n",
+       "      <td>1.325177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>764</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.547919</td>\n",
+       "      <td>0.010607</td>\n",
+       "      <td>-0.197495</td>\n",
+       "      <td>-0.235210</td>\n",
+       "      <td>-0.440843</td>\n",
+       "      <td>0.634868</td>\n",
+       "      <td>-0.398282</td>\n",
+       "      <td>-0.531023</td>\n",
+       "      <td>0.034165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>765</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.342981</td>\n",
+       "      <td>-0.022240</td>\n",
+       "      <td>-0.032180</td>\n",
+       "      <td>-0.685405</td>\n",
+       "      <td>-0.334153</td>\n",
+       "      <td>-0.906722</td>\n",
+       "      <td>-0.685193</td>\n",
+       "      <td>-0.275760</td>\n",
+       "      <td>-0.827832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>766</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.844885</td>\n",
+       "      <td>0.141994</td>\n",
+       "      <td>-1.024067</td>\n",
+       "      <td>0.327535</td>\n",
+       "      <td>0.311604</td>\n",
+       "      <td>-0.339533</td>\n",
+       "      <td>-0.371101</td>\n",
+       "      <td>1.170732</td>\n",
+       "      <td>-0.032855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>767</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.844885</td>\n",
+       "      <td>-0.941952</td>\n",
+       "      <td>-0.197495</td>\n",
+       "      <td>0.214986</td>\n",
+       "      <td>-0.440843</td>\n",
+       "      <td>-0.295903</td>\n",
+       "      <td>-0.473785</td>\n",
+       "      <td>-0.871374</td>\n",
+       "      <td>-0.078710</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>768 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Outcome  N1  Pregnancies   Glucose  BloodPressure  SkinThickness  \\\n",
+       "0          1   0     0.639947  0.864625      -0.032180       0.665181   \n",
+       "1          0   0    -0.844885 -1.204727      -0.528124      -0.010112   \n",
+       "2          1   0     1.233880  2.014265      -0.693438       0.327535   \n",
+       "3          0   1    -0.844885 -1.073339      -0.528124      -0.685405   \n",
+       "4          1   0    -1.141852  0.503310      -2.677212       0.665181   \n",
+       "..       ...  ..          ...       ...            ...            ...   \n",
+       "763        0   0     1.827813 -0.679177       0.298449       2.128317   \n",
+       "764        0   0    -0.547919  0.010607      -0.197495      -0.235210   \n",
+       "765        0   0     0.342981 -0.022240      -0.032180      -0.685405   \n",
+       "766        1   0    -0.844885  0.141994      -1.024067       0.327535   \n",
+       "767        0   1    -0.844885 -0.941952      -0.197495       0.214986   \n",
+       "\n",
+       "      Insulin       BMI  DiabetesPedigreeFunction       Age        N0  \n",
+       "0    0.311604  0.169483                  0.468492  1.425995  0.436284  \n",
+       "1   -0.440843 -0.848549                 -0.365061 -0.190672 -0.455696  \n",
+       "2    0.311604 -1.328478                  0.604397 -0.105584 -0.512575  \n",
+       "3   -0.536303 -0.630399                 -0.920763 -1.041549 -0.731491  \n",
+       "4    0.294758  1.551096                  5.484909 -0.020496  1.169312  \n",
+       "..        ...       ...                       ...       ...       ...  \n",
+       "763  0.429525  0.067679                 -0.908682  2.532136  1.325177  \n",
+       "764 -0.440843  0.634868                 -0.398282 -0.531023  0.034165  \n",
+       "765 -0.334153 -0.906722                 -0.685193 -0.275760 -0.827832  \n",
+       "766  0.311604 -0.339533                 -0.371101  1.170732 -0.032855  \n",
+       "767 -0.440843 -0.295903                 -0.473785 -0.871374 -0.078710  \n",
+       "\n",
+       "[768 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Building very simple Linear Regression Model"
    ]
   },
   {
