--- a/data manipulation with pandas/original_solution.ipynb
+++ b/data manipulation with pandas/original_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,13 +172,15 @@
        "[119184 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_path = r'G:\\DataScience\\Data Insight\\NAICS\\csv_files'\n",
+    "#place the directory where you can find all the 15CSV files here.\n",
+    "# Do not forget the r at the beginning\n",
+    "file_path = r'C:\\Users\\USER\\Documents\\GitHub\\festman\\data manipulation with pandas\\csv_files'\n",
     "all_csv_files = glob.glob(file_path + '/*.csv')\n",
     "\n",
     "csv_list = []\n",
