--- a/data manipulation with pandas/original_solution.ipynb
+++ b/data manipulation with pandas/original_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "[119184 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,17 +201,17 @@
     {
      "data": {
       "text/plain": [
-       "Non-metallic mineral product manufacturing[327]    276\n",
-       "3363                                               276\n",
-       "3365                                               276\n",
-       "3366                                               276\n",
-       "3369                                               276\n",
-       "                                                  ... \n",
-       "4879                                               180\n",
-       "3161                                               168\n",
-       "5612                                               108\n",
-       "5211                                                36\n",
-       "Monetary authorities - central bank[521]            36\n",
+       "Provincial and territorial public administration[912]    276\n",
+       "3372                                                     276\n",
+       "3391                                                     276\n",
+       "3399                                                     276\n",
+       "Air transportation[481]                                  276\n",
+       "                                                        ... \n",
+       "4879                                                     180\n",
+       "3161                                                     168\n",
+       "5612                                                     108\n",
+       "Monetary authorities - central bank[521]                  36\n",
+       "5211                                                      36\n",
        "Name: NAICS, Length: 437, dtype: int64"
       ]
      },
@@ -27509,7 +27509,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x23702f82608>"
+       "<matplotlib.legend.Legend at 0x23718037d08>"
       ]
      },
      "execution_count": 173,
@@ -27550,7 +27550,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2370496a308>"
+       "<matplotlib.legend.Legend at 0x23718717bc8>"
       ]
      },
      "execution_count": 174,
@@ -27720,7 +27720,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x23704928488>"
+       "<matplotlib.legend.Legend at 0x237185f6348>"
       ]
      },
      "execution_count": 178,
@@ -27825,7 +27825,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x23705534388>"
+       "<matplotlib.legend.Legend at 0x23718cd6808>"
       ]
      },
      "execution_count": 181,
@@ -27876,16 +27876,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x23704474a48>"
+       "<matplotlib.legend.Legend at 0x23718d0cf88>"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -27926,16 +27926,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x23706772248>"
+       "<matplotlib.legend.Legend at 0x237192b6148>"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -27965,6 +27965,14 @@
     "#red = patches.Patch(color='blue', label='Other manufacturing')\n",
     "blue = patches.Patch(color='black', label='Employment distribution across mulitple NAICS numbers industries')\n",
     "plt.legend(handles=[blue], prop = {'size':15})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Contact me on LinkedIn if you have any questions\n",
+    "_**Franklin Koomson Adjei**\n"
    ]
   },
   {
